Changelog
=========

7.1-dev - (unreleased)
----------------------
* Feature: archive dialog now gives option to archive also previous
  versions of given context
  [ichimdav refs #18740]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.workflow
  [ichimdav refs #18316]
* Feature: added archive and unarchive content rules which can archive
  or unarchive either the object or the previous version of the object
  for which the action was registered
  [ichim-david refs #18316]

7.0 - (2014-02-03)
------------------
* Change: archive/unarchive operations now trigger a cache purge
  [ichim-david refs #18155]

6.9 - (2014-01-22)
------------------
* Bug fix: EffectiveDate is no longer set to now() on publish
  [ghicaale refs #9110]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.8 - (2013-12-10)
------------------
* Bug fix: Add missing dependency to ATVocabularyManager
  [avoinea]
* Change: make archived portal message more visible by
  using attentionMessage icon
  [demarant]
* Change: trying usage of queryAdapter for pylint validation
  [simiamih #17382]
* Feature: updated .gitignore
  [ghicaale]

6.7 - (2013-11-20)
------------------
* Feature: include option to archive/unarchive all subobjects/content
  of folderish object
  [simiamih #17382]

6.6 - (2013-11-06)
------------------
* Bug fix: also define get_base in archive_dialog.js as publish_dialog.js is
  not always loaded
  [tiberich #17303]
* Bug fix: allow unarchiving, the reverse of the archiving operation
  [tiberich #17302]
* Bug fix: refactor the way the workflow menu is constructed when adding the
  Archive/Unarchive actions
  [tiberich #17374]

6.5 - (2013-10-22)
------------------
* Bug fix: Always show the Archive action in the workflow state menu, even
  if the workflow is simplified and the Advanced page doesn't appear
  [tiberich #9327]